# ws-evs-slam

./: README.md
EVS_SLAM/: CMakeLists.txt  build_ros_aarch64.sh  build_ros_x86.sh
EVS_SLAM/Examples/Monocular/: Monocam.yaml  mono_tum
EVS_SLAM/Examples/RGB-D/: ZEDM.yaml  ZEDM_H.yaml
EVS_SLAM/Examples/ROS/evs_slam/: CMakeLists.txt  KeyFrameTrajectory.txt  KeyFrameTrajectory_STEREO.txt  manifest.xml  package.xml  path_stereo_kitti  pointcloud.pcd  ros_rgbd_zed  ros_stereo_zed
EVS_SLAM/Examples/ROS/evs_slam/msg/: Num.msg
EVS_SLAM/Examples/ROS/evs_slam/msg_gen/cpp/include/evs_slam/: Num.h  array2D.h  msg_mask.h
EVS_SLAM/Examples/ROS/evs_slam/msg_gen/lisp/: Num.lisp  _package.lisp  _package_Num.lisp  _package_array2D.lisp  _package_msg_mask.lisp  array2D.lisp  msg_mask.lisp  orb_slam2-msg.asd
EVS_SLAM/Examples/ROS/evs_slam/src/: ros_rgbd_zed.cc  ros_stereo_zed.cc  stereo_red_kitti.cc
EVS_SLAM/Examples/ROS/evs_slam/src/evs_slam/msg/: _Num.py  __init__.py  _array2D.py  _msg_mask.py
EVS_SLAM/Examples/ROS/evs_slam/src/python/: code.py  mesh.py  meshdynamic.py  pcd_static.pcd
EVS_SLAM/Examples/Stereo/: ZEDM.yaml  stereo_kitti_mod.cc
EVS_SLAM/include/: Frame.h  FrameDrawer.h  MapDrawer.h  MapPoint.h  System.h  Tracking.h  Viewer.h
EVS_SLAM/src/: Frame.cc  FrameDrawer.cc  KeyFrame.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  System.cc  Tracking.cc  Viewer.cc
seg_msg_ros/: CMakeLists.txt  package.xml
seg_msg_ros/scripts/segmentacion/: zedm_rgbd_pub_net.py  zedm_stereo_pub_net.py
seg_msg_ros/scripts/segmentacion/modelos/Deeplabv3_resnet50/: __init__.py
